--- a/public/labs/a3/index.css
+++ b/public/labs/a3/index.css
@@ -4,61 +4,78 @@
 }*/
 
 p#id-selector-1 {
- background-color: red;
- color: white;
+  background-color: red;
+  color: white;
 }
 p#id-selector-2 {
- background-color: yellow;
- color: black;
+  background-color: yellow;
+  color: black;
 }
 
 .class-selector {
- background-color: yellow;
- color: blue;
+  background-color: yellow;
+  color: blue;
 }
 
 .selector-1 .selector-3 {
-   background-color: red;
-   color: white;
+  background-color: red;
+  color: white;
 }
 .selector-2 > .selector-3 > .selector-4 {
-   background-color: yellow;
-   color: blue;
+  background-color: yellow;
+  color: blue;
 }
 
-.fg-color-black { color: black; }
-.fg-color-white { color: white; }
-.fg-color-blue { color: #7070ff; }
-.fg-color-red { color: #ff7070; }
-.fg-color-green { color: green; }
+.fg-color-black {
+  color: black;
+}
+.fg-color-white {
+  color: white;
+}
+.fg-color-blue {
+  color: #7070ff;
+}
+.fg-color-red {
+  color: #ff7070;
+}
+.fg-color-green {
+  color: green;
+}
 
 .bg-color-yellow {
-   background-color: #ffff07;
+  background-color: #ffff07;
 }
 .bg-color-blue {
-   background-color: #7070ff;
+  background-color: #7070ff;
 }
 .bg-color-red {
-   background-color: #ff7070;
+  background-color: #ff7070;
 }
 .bg-color-green {
-   background-color: green;
+  background-color: green;
 }
 
 .border-fat {
-   border-width: 20px 30px 20px 30px; }
+  border-width: 20px 30px 20px 30px;
+}
 .border-thin {
-   border-width: 4px; }
+  border-width: 4px;
+}
 .border-solid {
-   border-style: solid; }
+  border-style: solid;
+}
 .border-dashed {
-   border-style: dashed; }
+  border-style: dashed;
+}
 .border-yellow {
-   border-color: #ffff07; }
+  border-color: #ffff07;
+}
 .border-red {
-   border-color: #ff7070; }
+  border-color: #ff7070;
+}
 .border-blue {
-   border-color: #7070ff; }
+  border-color: #7070ff;
+}
 
 .padded-top-left {
   padding-top: 50px;
@@ -88,66 +105,66 @@ p#id-selector-2 {
 }
 
 .rounded-corners-top {
- border-top-left-radius: 40px;
- border-top-right-radius: 40px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
 }
 
 .rounded-corners-bottom {
- border-bottom-left-radius: 40px;
- border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
 }
 
 .rounded-corners-all-around {
- border-radius: 50px;
+  border-radius: 50px;
 }
 
 .rounded-corners-inline {
- border-radius: 30px 0px 20px 50px;
+  border-radius: 30px 0px 20px 50px;
 }
 
 .dimension-portrait {
-   width: 75px;
-   height: 100px;
+  width: 75px;
+  height: 100px;
 }
 
 .dimension-landscape {
-   width: 100px;
-   height: 75px;
+  width: 100px;
+  height: 75px;
 }
 
 .dimension-square {
-   width: 75px;
-   height: 75px;
+  width: 75px;
+  height: 75px;
 }
 
 .pos-relative-nudge-up-right {
-   position: relative;
-   bottom: 30px;
-   left: 30px;
+  position: relative;
+  bottom: 30px;
+  left: 30px;
 }
 .pos-relative-nudge-down-right {
-   position: relative;
-   top: 20px;
-   left: 20px;
+  position: relative;
+  top: 20px;
+  left: 20px;
 }
 .pos-relative {
-   position: relative;
+  position: relative;
 }
 
 .pos-absolute-10-10 {
-   position: absolute;
-   top: 10px;
-   left: 10px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 .pos-absolute-50-50 {
-   position: absolute;
-   top: 50px;
-   left: 50px;
+  position: absolute;
+  top: 50px;
+  left: 50px;
 }
 .pos-absolute-120-20 {
-   position: absolute;
-   top: 20px;
-   left: 120px;
+  position: absolute;
+  top: 20px;
+  left: 120px;
 }
 
 .pos-fixed {
@@ -157,169 +174,169 @@ p#id-selector-2 {
 }
 
 .zindex-bring-to-front {
-   z-index: 10;
+  z-index: 10;
 }
 
 .float-left {
-   float: left;
+  float: left;
 }
 
 .float-right {
-   float: right;
-   height: 100px;
+  float: right;
+  height: 100px;
 }
 
 .float-done {
-   clear: both;
+  clear: both;
 }
 
 .grid-row {
-   clear: both;
+  clear: both;
 }
 
 .grid-col-half-page {
-   width: 50%;
-   float: left;
+  width: 50%;
+  float: left;
 }
 
 .grid-col-third-page {
-   width: 33%;
-   float: left;
+  width: 33%;
+  float: left;
 }
 
 .grid-col-two-thirds-page {
-   width: 67%;
-   float: left;
+  width: 67%;
+  float: left;
 }
 
 .grid-col-left-sidebar {
-   width: 20%;
-   float: left;
+  width: 20%;
+  float: left;
 }
 
 .grid-col-main-content {
-   width: 60%;
-   float: left;
+  width: 60%;
+  float: left;
 }
 
 .grid-col-right-sidebar {
-   width: 20%;
-   float: left;
+  width: 20%;
+  float: left;
 }
 
 .rotate-paragraph {
- width: 250px;
- height: 250px;
- transform: rotate(90deg);
+  width: 250px;
+  height: 250px;
+  transform: rotate(90deg);
 }
 
 .rotate-list {
-transform: rotate(12deg);
-width: 100px;
-background-color: red;
-color: white;
+  transform: rotate(12deg);
+  width: 100px;
+  background-color: red;
+  color: white;
 }
 
 .rotate-list-1 {
-transform: rotate(30deg);
-width: 100px;
-background-color: red;
-color: white;
+  transform: rotate(30deg);
+  width: 100px;
+  background-color: red;
+  color: white;
 }
 
 .rotate-list-items li {
-   width: 100px;
-   text-align: right;
+  width: 100px;
+  text-align: right;
 }
 .rotate-list-items li:nth-child(1) {
-   transform: rotate(-10deg);
-   background-color: yellow;
+  transform: rotate(-10deg);
+  background-color: yellow;
 }
 .rotate-list-items li:nth-child(2) {
-   transform: rotate(2deg);
-   background-color: blue;
-   color: white;
+  transform: rotate(2deg);
+  background-color: blue;
+  color: white;
 }
 .rotate-list-items li:nth-child(3) {
-   transform: rotate(10deg);
-   background-color: red;
+  transform: rotate(10deg);
+  background-color: red;
 }
 
 .rotate-image {
-   transform: rotate(-10deg);
+  transform: rotate(-10deg);
 }
 
 .rotate-table {
-   position: relative;
-   left: 50px;
-   transform: rotate(15deg);}
+  position: relative;
+  left: 50px;
+  transform: rotate(15deg);
+}
 .rotate-table tr:nth-child(1) {
-   background-color: black;
-   color: white;}
-.rotate-table tr:nth-child(n+2) {
-   background-color: yellow;}
-.rotate-table tr:nth-child(n+5) {
-   background-color: blue;
-   color: white;}
-.rotate-table tr:nth-child(n+8) {
-   background-color: red;}
-.rotate-table tr:nth-child(n+11) {
-   background-color: green;
-   color: white;
+  background-color: black;
+  color: white;
+}
+.rotate-table tr:nth-child(n + 2) {
+  background-color: yellow;
+}
+.rotate-table tr:nth-child(n + 5) {
+  background-color: blue;
+  color: white;
+}
+.rotate-table tr:nth-child(n + 8) {
+  background-color: red;
+}
+.rotate-table tr:nth-child(n + 11) {
+  background-color: green;
+  color: white;
 }
 
 .gradients-linear {
- background: linear-gradient(yellow, red);
-   width: 200px;
-   height: 200px;
+  background: linear-gradient(yellow, red);
+  width: 200px;
+  height: 200px;
 }
 
 .gradients-linear-example {
- background: linear-gradient(pink, yellow);
-   width: 200px;
-   height: 200px;
+  background: linear-gradient(pink, yellow);
+  width: 200px;
+  height: 200px;
 }
 
 .gradients-radial {
- background: radial-gradient(yellow, green);
- width: 200px;
- height: 200px;
+  background: radial-gradient(yellow, green);
+  width: 200px;
+  height: 200px;
 }
 
 .gradients-radial-example {
- background: radial-gradient(pink, lightblue);
- width: 200px;
- height: 200px;
+  background: radial-gradient(pink, lightblue);
+  width: 200px;
+  height: 200px;
 }
 
 .gradients-positioned {
- background:
-  radial-gradient(
-   at top left, blue, red);
- width: 200px;
- height: 200px;
- color: white;
+  background: radial-gradient(at top left, blue, red);
+  width: 200px;
+  height: 200px;
+  color: white;
 }
 
-
 .gradients-positioned-example {
- background:
-  radial-gradient(
-   at bottom left, pink, yellow);
- width: 200px;
- height: 200px;
- color: lightblue;
+  background: radial-gradient(at bottom left, pink, yellow);
+  width: 200px;
+  height: 200px;
+  color: lightblue;
 }
 
 .animation-keyframes {
-   position: relative;
-   top: 0px;
-   animation-duration: 7s;
-   animation-name: slidein;
-   width: 200px;
-   height: 200px;
-   background-color: red;
-   color: white;
+  position: relative;
+  top: 0px;
+  animation-duration: 7s;
+  animation-name: slidein;
+  width: 200px;
+  height: 200px;
+  background-color: red;
+  color: white;
 }
 
 @keyframes slidein {
@@ -334,42 +351,41 @@ color: white;
     color: black;
   } /* continued on right */
 
-   50% {
-     position: relative;
-     top: -200px;
-     font-size: 300%;
-     margin-left: 25%;
-     width: 400px;
-     height: 400px;
-     background-color: blue;
-     color: white;
-   }
+  50% {
+    position: relative;
+    top: -200px;
+    font-size: 300%;
+    margin-left: 25%;
+    width: 400px;
+    height: 400px;
+    background-color: blue;
+    color: white;
+  }
 
-   to {
-     position: relative;
-     top: 0px;
-     font-size: 100%;
-     margin-left: 0%;
-     width: 200px;
-     height: 200px;
-     background-color: red;
-     color: white;
-   }
+  to {
+    position: relative;
+    top: 0px;
+    font-size: 100%;
+    margin-left: 0%;
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    color: white;
+  }
 }
 
 .animation-keyframes-example {
-   position: relative;
-   top: 0px;
-   animation-duration: 5s;
-   animation-name: slidein-example;
-   font-size: 30px;
-   width: 300px;
-   height: 300px;
-   background-color: pink;
-   color: blue;
-   animation-iteration-count: infinite;
-   animation-direction: alternate;
-
+  position: relative;
+  top: 0px;
+  animation-duration: 5s;
+  animation-name: slidein-example;
+  font-size: 30px;
+  width: 300px;
+  height: 300px;
+  background-color: pink;
+  color: blue;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes slidein-example {
@@ -384,27 +400,27 @@ color: white;
     color: pink;
   } /* continued on right */
 
-   50% {
-     position: relative;
-     top: -200px;
-     font-size: 200%;
-     margin-left: 25%;
-     width: 300px;
-     height: 300px;
-     background-color: lightblue;
-     color: pink;
-   }
+  50% {
+    position: relative;
+    top: -200px;
+    font-size: 200%;
+    margin-left: 25%;
+    width: 300px;
+    height: 300px;
+    background-color: lightblue;
+    color: pink;
+  }
 
-   to {
-     position: relative;
-     top: 0px;
-     font-size: 100%;
-     margin-left: 0%;
-     width: 200px;
-     height: 200px;
-     background-color: pink;
-     color: blue;
-   }
+  to {
+    position: relative;
+    top: 0px;
+    font-size: 100%;
+    margin-left: 0%;
+    width: 200px;
+    height: 200px;
+    background-color: pink;
+    color: blue;
+  }
 }
 
 .flex-container-1 {
@@ -430,107 +446,113 @@ color: white;
 }
 
 .flex-container-2 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
 }
 
 .flex-container-3 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: center;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: center;
 }
 
 .flex-container-4 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: end;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: end;
 }
 
 .flex-container-5 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: space-around;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: space-around;
 }
 
 .flex-container-6 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: space-between;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: space-between;
 }
 
 .flex-container-7 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: space-evenly;
-   align-items: flex-start;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 .flex-container-8 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: space-evenly;
-   align-items: center;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .flex-container-9 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: space-evenly;
-   align-items: flex-end;
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
 }
 
 .flex-container-10 {
-   border-width: 5px;
-   border-color: black;
-   border-style: solid;
-   display: flex;
-   justify-content: space-evenly;
-
+  border-width: 5px;
+  border-color: black;
+  border-style: solid;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .flex-container-10 > .flex-box {
-   flex-basis: 100%;
+  flex-basis: 100%;
 }
 
-@media (min-width: 0px)
-   and (max-width: 600px) {
-   body {
-       background-color: yellow;
-   }
-   .media-query {
-       background-color: red;
-       color: white;
-   }
+@media (min-width: 0px) and (max-width: 600px) {
+  div {
+    background-color: pink;
+    color: purple;
+  }
+  .media-query {
+    background-color: yellow;
+    color: lightblue;
+  }
 }
 
+@media (min-width: 600px) and (max-width: 1200px) {
+  p {
+    background-color: green;
+    color: lightblue;
+  }
+  .media-query {
+    background-color: pink;
+    color: green;
+  }
+}
 
+@media (min-width: 1200px) and (max-width: 1800px) {
+  h2 {
+    background-color: pink;
+    color: white;
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+  .media-query {
+    background-color: purple;
+    color: gray;
+  }
+}
