--- a/public/tuiter/HomeScreen/index.css
+++ b/public/tuiter/HomeScreen/index.css
@@ -10,10 +10,11 @@
 .wd-rounded-image {
   width: 50px;
   height: 50px;
+  border-radius: 60%;
 }
 .wd-post-box-border {
   border: 1px solid rgb(110, 118, 125);
-  border-radius: 10px;
+  border-radius: 50%;
 }
 
 .wd-post-image-border {
@@ -22,4 +23,8 @@
 
 .wd-post-image {
   width: 100%;
+}
+
+.wd-hide-button {
+  display: none;
 }
